Correction on mobile viewing, but still doesn't show up the menu

--- a/src/services/patient-med-profile/css/custom.css
+++ b/src/services/patient-med-profile/css/custom.css
@@ -18,6 +18,11 @@ a:hover {
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
+ul li {
+	display: block;
+	list-style-type: none;
+}
+
 header {
 	margin-top: 1cm;
 	background: #cccccc;
@@ -152,7 +157,7 @@ h1 {
 
 	header ul li ul {
 		background: #2bb673;
-    display: block;
+    	display: none;
 		height: 100%;
 		position: absolute;
 		top: -30px;
